[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
ollama-rs = "0.3.5"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
tokio = { version = "1", features = ["full"] }
tui-textarea = "0.7.0"

[[bin]]
name = "agent"
path = "src/main.rs"
